--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 spring.application.name=backend
 
+#add api prefix globally
+server.servlet.contextPath=/api
 
-#h2 db configuration
+# H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# H2 datasource
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+# Optional but recommended
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
